# aug

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  TOOLS.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
aug/: __init__.py  app.py  config.py
aug/api/: __init__.py  security.py  telegram.py
aug/api/interfaces/: base.py  rest.py  telegram.py
aug/api/routers/: __init__.py  auth.py  browser.py  chat.py  files.py  gmail_auth.py  hooks.py  settings.py  skills.py  threads.py
aug/api/schemas/: __init__.py  chat.py  files.py  threads.py
aug/core/: __init__.py  auth.py  browser_view.py  compaction.py  consolidation.py  dispatch.py  events.py  graph.py  llm.py  memory.py  prompts.py  registry.py  run.py  skill_deps.py  state.py
aug/core/agents/: __init__.py  base.py  base_agent.py  chat_agent.py  default.py  fake.py  fake_agent.py
aug/core/reflexes/: __init__.py  (+1 more)
aug/utils/: __init__.py  cdp.py  data.py  db.py  file_settings.py  gmail_credentials.py  homeassistant.py  job_control.py  logging.py  notify.py  portainer.py  reminders.py  scheduler.py  skills.py  ssh.py  state.py  storage.py  tasks.py  user_settings.py
chromium/: Dockerfile  cdp-proxy.sh  wrapped-chromium
docs/: TODO.md  architecture-friction.md  browser-tool.md  gmail-setup.md  memory-design.md  portainer-setup.md  skills-design.md  technical-debt.md  tool-ideas.md  webhook-design.md
docs/backlog/: TODO.md  production-hardening.md  tool-ideas.md
docs/design/: context-compaction.md  memory-design.md  skills-ui-design.md
docs/prd/: ssh-tool-with-approval.md
docs/setup-guides/: gmail-setup.md  telegram-forum-setup.md
miniapp/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
miniapp/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
tests/: __init__.py  conftest.py  test_app_state.py  test_approval.py  test_auth.py  test_browser_router.py  test_browser_tool.py  test_browser_view.py  test_cdp.py  test_chat_agent.py  test_compaction.py  test_consolidation.py  test_debounce.py  test_describe_image.py  test_file_content.py  test_file_settings.py  test_gmail_tools.py  test_health.py  test_homeassistant_reflex.py  test_hooks.py  test_image_gen.py  test_image_gen_model.py  test_interruption.py  test_memory.py  test_portainer.py  test_preprocess.py  test_prompts.py  test_push_delivery.py  test_rate_limiter.py  test_reflexes.py  test_reminders.py  test_run_ssh.py  test_send_stream.py  test_set_reminder.py  test_settings_router.py  test_skill_deps.py  test_skills.py  test_skills_router.py  test_subagent.py  test_task_tools.py  (+5 more)
(+41 files in other folders)
