[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aug"
version = "0.1.0"
description = "AUG — Agent Using Graph. Personal AI assistant backend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-core>=0.2",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.2",
    "python-telegram-bot[webhooks]>=21.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "trafilatura>=1.12",
    "markdown>=3.6",
    "browser-use>=0.12.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["aug"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
