[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aug"
version = "0.1.0"
description = "AUG — Agent Using Graph. Personal AI assistant backend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-core>=0.2",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.2",
    "python-telegram-bot[webhooks]>=21.0",
    "httpx>=0.27",
    "python-multipart>=0.0.26",
    "trafilatura>=1.12",
    "markdown>=3.6",
    "browser-use>=0.12.2",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.100",
    "websockets>=13.0",
    "pyyaml>=6.0",
    "asyncssh>=2.14",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
# Python packages available to the agent via run_bash and tools.
# Installed in Docker via: uv sync --extra agent-tools
agent-tools = [
    "pandas>=2.0",
    "pillow>=10.0",
    "matplotlib>=3.8",
    "pytesseract>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["aug"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "G", "LOG", "RUF"]
ignore = ["RUF012", "RUF002", "ASYNC240", "ASYNC221"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
